[package]
name = "moni"
description = "Recursively deletes all the apparitions of a directory/file"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
walkdir = "2"
owo-colors = "3"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
