[package]
name = "moni"
description = "Recursively deletes all the apparitions of a directory/file"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
walkdir = "2"
owo-colors = "3"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
