[package]
name = "moni"
description = "Recursively deletes all the apparitions of a directory/file"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://github.com/UltiRequiem/moni"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
walkdir = "2"
owo-colors = "3"
home = "0.5.3"
tokio = { version = "1.18.5", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
